--- a/source/components/window/window.less
+++ b/source/components/window/window.less
@@ -45,7 +45,9 @@
         height: 34px;
         text-align: center;
         flex-shrink: 0;
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         position: relative;
         color: inherit;
 
